@@ -4,6 +4,8 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* ctrl-c'ing pmaint regen hang bug is now fixed.
+
 * fix a bug in pmaint regen and friends where if the requested repository
   isn't found, the last examined is used.  Additionally, restore ability
   to specify a repository by location.
